fix: FontAwesome works for android

--- a/ios/CarRentalRN/Info.plist
+++ b/ios/CarRentalRN/Info.plist
@@ -53,7 +53,7 @@
 	</dict>
 	<key>UIAppFonts</key>
 	<array>
-		<string>fontawesome-webfont.ttf</string>
+		<string>FontAwesome.ttf</string>
 	</array>
 </dict>
 </plist>
